# HevcConverterWrapper

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt
include/: parse_files.hpp
src/: main.cpp
